# ray-tracer

./: .gitignore  CMakeLists.txt  README.md
src/: colors.h  light.h  main.cpp  sdl_extentions.h  sphere.h
src/math/: vector.cpp  vector.h
